--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Exercise</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Exercise</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css">
 </head>
 
 <body>
+
+  <main>
+    <img src="./me.jpg" alt="Me" width="300px">
+    <h1>About</h1>
+    <p>
+      I'm a motivated and detail-oriented junior AI-enabled full-stack .NET developer who brings both technical
+      expertise and a strategic mindset to every project I undertake. With a solid foundation spanning the entire software development
+      lifecycle, I specialize in building robust, scalable applications that bridge powerful back-end architecture with
+      intuitive, user-focused front-end experiences.
+    </p>
+    <h3>My hobbies</h3>
+    <ul>
+      <li>Gym</li>
+      <li>Hiking</li>
+      <li>Swimming</li>
+      <li>Fishing</li>
+      <li>Reading</li>
+    </ul>
+  </main>
 
 
 </body>
