change bg color and font color, move inline styling to main.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <main>
-    <img src="./me.jpg" alt="Me" width="300px">
+    <img src="./me.jpg" alt="Me">
     <h1>About</h1>
     <p>
       I'm a motivated and detail-oriented junior AI-enabled full-stack .NET developer who brings both technical
