complete 1 - 4 tasks in js

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       const listItems = document.getElementById("hobbiesList");
       alert(Array.from(listItems.children).map(item => item.textContent));
     }
+
+    console.log("This code runs from inside the web page!");
+    let message = "Welcome to JavaScript!";
+    console.log(message);
   </script>
 </body>
 
