--- a/js-challenges/index.html
+++ b/js-challenges/index.html
@@ -4,15 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>JS Button Example</title>
 </head>
 
 <body>
-
+<h1>Click the Button!</h1>
+<button onclick="sayHello()">Say Hello</button>
   <script>
-    console.log("This code runs from inside the web page!");
-    let message = "Welcome to JavaScript!";
-    console.log(message);
+    function sayHello() {
+      alert("Hello from JavaScript!");
+    }
+    // console.log("This code runs from inside the web page!");
+    // let message = "Welcome to JavaScript!";
+    // console.log(message);
   </script>
 </body>
 
