complete task 5 mini challenge

--- a/js-challenges/index.html
+++ b/js-challenges/index.html
@@ -10,9 +10,13 @@
 <body>
 <h1>Click the Button!</h1>
 <button onclick="sayHello()">Say Hello</button>
+<button onclick="tellJoke()">Tell me a joke</button>
   <script>
     function sayHello() {
       alert("Hello from JavaScript!");
+    }
+    function tellJoke() {
+      alert("Why don't eggs tell jokes? - They'd crack each other up! 🥚😄");
     }
     // console.log("This code runs from inside the web page!");
     // let message = "Welcome to JavaScript!";
