Complete task 6: Using input fields with validation

--- a/js-challenges/index.html
+++ b/js-challenges/index.html
@@ -4,23 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS Button Example</title>
+  <title>Greeting Input</title>
 </head>
 
 <body>
-<h1>Click the Button!</h1>
-<button onclick="sayHello()">Say Hello</button>
-<button onclick="tellJoke()">Tell me a joke</button>
+  <h2>Enter your name:</h2>
+  <input type="text" id="nameInput" placeholder="Your name here">
+  <button onclick="greetUser()">Greet Me</button>
+
   <script>
-    function sayHello() {
-      alert("Hello from JavaScript!");
+    function greetUser() {
+      let name = document.getElementById("nameInput").value;
+      if (name.trim() === "") {
+        alert("Please enter your name first!");
+      } else {
+        alert("Hello, " + name + "!");
+      }
     }
-    function tellJoke() {
-      alert("Why don't eggs tell jokes? - They'd crack each other up! 🥚😄");
-    }
-    // console.log("This code runs from inside the web page!");
-    // let message = "Welcome to JavaScript!";
-    // console.log(message);
   </script>
 </body>
 
